set up initial forms and display code

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -11,6 +11,16 @@
     </div>
   <% end %>
 
+  <%= form.label :name %>
+  <%= form.text_field :name %>
+
+  <br/>
+
+  <%= form.label :industry %>
+  <%= form.text_field :industry %>
+
+  <br/>
+
   <div class="actions">
     <%= form.submit %>
   </div>
