--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -6,6 +6,8 @@
   <thead>
     <tr>
       <th colspan="3"></th>
+      <th>Name</th>
+      <th>Industry</th>
     </tr>
   </thead>
 
@@ -15,6 +17,8 @@
         <td><%= link_to 'Show', company %></td>
         <td><%= link_to 'Edit', edit_company_path(company) %></td>
         <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= company.name %></td>
+        <td><%= company.industry %></td>
       </tr>
     <% end %>
   </tbody>
